@@ -2,6 +2,9 @@
 All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
+### Added
+- Instead of just launching web browser where user has to load the NVIDA website in order to download the driver, the application now does it for you.
+
 ### Fixed
 - Repairing a config key does no longer skip the request.
 
